; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_ap_drv_ops.c_add_buf.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_ap_drv_ops.c_add_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpabuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wpabuf**, %struct.wpabuf*)* @add_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_buf(%struct.wpabuf** %0, %struct.wpabuf* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.wpabuf**, align 8
  %5 = alloca %struct.wpabuf*, align 8
  store %struct.wpabuf** %0, %struct.wpabuf*** %4, align 8
  store %struct.wpabuf* %1, %struct.wpabuf** %5, align 8
  %6 = load %struct.wpabuf*, %struct.wpabuf** %5, align 8
  %7 = icmp ne %struct.wpabuf* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %21

9:                                                ; preds = %2
  %10 = load %struct.wpabuf**, %struct.wpabuf*** %4, align 8
  %11 = load %struct.wpabuf*, %struct.wpabuf** %5, align 8
  %12 = call i32 @wpabuf_len(%struct.wpabuf* %11)
  %13 = call i64 @wpabuf_resize(%struct.wpabuf** %10, i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %9
  store i32 -1, i32* %3, align 4
  br label %21

16:                                               ; preds = %9
  %17 = load %struct.wpabuf**, %struct.wpabuf*** %4, align 8
  %18 = load %struct.wpabuf*, %struct.wpabuf** %17, align 8
  %19 = load %struct.wpabuf*, %struct.wpabuf** %5, align 8
  %20 = call i32 @wpabuf_put_buf(%struct.wpabuf* %18, %struct.wpabuf* %19)
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %16, %15, %8
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i64 @wpabuf_resize(%struct.wpabuf**, i32) #1

declare dso_local i32 @wpabuf_len(%struct.wpabuf*) #1

declare dso_local i32 @wpabuf_put_buf(%struct.wpabuf*, %struct.wpabuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
